--- a/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -136,16 +136,16 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="EXu-XP-iIf">
-                                        <rect key="frame" x="0.0" y="57" width="343" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="57" width="343" height="22.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hce-qy-wyC">
-                                                <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="42" height="22.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ypA-wB-khK" customClass="DynamicBorderedTextField" customModule="Homepwner" customModuleProvider="target">
-                                                <rect key="frame" x="50" y="0.0" width="293" height="20.5"/>
+                                                <rect key="frame" x="50" y="0.0" width="293" height="22.5"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
@@ -156,7 +156,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4OM-vk-Jfm">
-                                        <rect key="frame" x="0.0" y="85.5" width="343" height="50.5"/>
+                                        <rect key="frame" x="0.0" y="87.5" width="343" height="50.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5VJ-yW-uqp">
                                                 <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
@@ -174,8 +174,20 @@
                                         </subviews>
                                     </stackView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="248" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="F98-p1-zi0">
-                                        <rect key="frame" x="0.0" y="144" width="343" height="399"/>
+                                        <rect key="frame" x="0.0" y="146" width="343" height="359"/>
                                     </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="JbU-N4-iAY">
+                                        <rect key="frame" x="0.0" y="513" width="343" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ylg-Ak-ZBz">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                                <state key="normal" title="Remove Image"/>
+                                                <connections>
+                                                    <action selector="removePicture:" destination="Blg-O3-fPw" eventType="touchUpInside" id="Ncp-wB-ogI"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="SQ9-Zs-tsD" firstAttribute="leading" secondItem="ggr-pc-FVz" secondAttribute="leading" id="6fn-n5-J3J"/>
@@ -213,6 +225,7 @@
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="5VJ-yW-uqp" id="0pP-4r-W1u"/>
+                        <outlet property="editorButtons" destination="JbU-N4-iAY" id="xcK-en-TpK"/>
                         <outlet property="imageView" destination="F98-p1-zi0" id="AhN-v4-6Np"/>
                         <outlet property="nameField" destination="lsH-u8-kpD" id="FNe-Cd-hLm"/>
                         <outlet property="serialNumberField" destination="Rd5-oY-O5Q" id="qah-6I-0Lb"/>
